// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`documentation getI18nDocumentation full annotations 1`] = `
"**Text Key:** productDetailsInfo

**Text Value:** product details info

**Additional Information:** XFLD,60: Label for a section"
`;

exports[`documentation getI18nDocumentation no annotation 1`] = `
"**Text Key:** productDetailsInfo

**Text Value:** product details info"
`;

exports[`documentation getI18nDocumentation no max length 1`] = `
"**Text Key:** productDetailsInfo

**Text Value:** product details info

**Additional Information:** XFLD"
`;

exports[`documentation getI18nDocumentation no note 1`] = `
"**Text Key:** productDetailsInfo

**Text Value:** product details info

**Additional Information:** XFLD,60"
`;
